# python-sdk

./: Makefile  README.md  docs.Dockerfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dispatch_docs.yml
docs/: mkdocs.yml  pydoc-markdown.yml
docs/common/: custom.md
docs/docs/: deprecations.md  edition-drop.md  edition.md  erc20.md  index.md  installation.md  ipfs-storage.md  marketplace.md  multiwrap.md  nft-collection.md  nft-drop.md  sdk.md  snippets.json  token.md  wallet-authenticator.md
nftlabs/: __init__.py
scripts/: generate_snippets.py
tests/: skip_custom.py  skip_multiwrap.py  test_auth.py  test_bundle.py  test_edition.py  test_edition_drop.py  test_events.py  test_ipfs.py  test_market.py  test_marketplace.py  test_nft.py  test_nft_collection.py  test_nft_drop.py  test_roles.py  test_signature_mint_1155.py  test_signature_mint_20.py  test_signature_mint_721.py  test_storage.py  test_token.py
tests/fixtures/: sdk.py
web3sdkio/: __init__.py  sdk.py
web3sdkio/abi/: __init__.py  drop_erc1155.py  drop_erc721.py  i_web3sdkio_primary_sale.py  i_web3sdkio_royalty.py  marketplace.py  token_erc1155.py  token_erc20.py  token_erc721.py  web3sdkio_contract.py
web3sdkio/common/: claim_conditions.py  currency.py  feature_detection.py  marketplace.py  nft.py  sign.py  snapshots.py
web3sdkio/constants/: addresses.py  currency.py  role.py  rpc.py  urls.py
web3sdkio/contracts/: custom.py  edition.py  edition_drop.py  maps.py  marketplace.py  multiwrap.py  nft_collection.py  nft_drop.py  token.py
web3sdkio/core/: __init__.py  sdk.py
(+57 files in other folders)
