[tool.poetry]
name = "nftlabs-sdk"
version = "0.3.0"
description = "Official Web3sdkio sdk"
authors = ["Ibrahim Ahmed <abe@web3sdk.io>", "Jake Loo <jake@web3sdk.io>", "Ayush Pathak <ayush@web3sdk.io>"]
packages = [
    { include = "nftlabs/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.6"
web3 = "^5.24.0"
web3sdkio-web3 = "^5.24.8"
web3sdkio-contract-wrappers = "^2.0.0"
dataclasses-json = "^0.5.6"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
